force-app/main/default/objects/User/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <label>CR</label>
    <length>5</length>
    <type>Text</type>
</CustomField>