force-app/main/default/objects/User/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setor 1</fullName>
            </value>
            <value>
                <fullName>Setor 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>