force-app/main/default/objects/User/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <defaultValue>&quot;Sao Paulo Capital&quot;</defaultValue>
    <label>Unidade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Administração Pública DF</fullName>
            </value>
            <value>
                <fullName>Agronegócio</fullName>
            </value>
            <value>
                <fullName>Amapá</fullName>
            </value>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>Aracaju</fullName>
            </value>
            <value>
                <fullName>Atendimento ao Cliente</fullName>
            </value>
            <value>
                <fullName>Barueri</fullName>
            </value>
            <value>
                <fullName>Bauru</fullName>
            </value>
            <value>
                <fullName>Camaçari</fullName>
            </value>
            <value>
                <fullName>Campinas</fullName>
            </value>
            <value>
                <fullName>Central Nacional de Licitações</fullName>
            </value>
            <value>
                <fullName>CIEE em Movimento</fullName>
            </value>
            <value>
                <fullName>CIEE One</fullName>
            </value>
            <value>
                <fullName>Distrito Federal</fullName>
            </value>
            <value>
                <fullName>Feira de Santana</fullName>
            </value>
            <value>
                <fullName>Feiras</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Goiás</fullName>
            </value>
            <value>
                <fullName>GR Centro-Oeste e Norte</fullName>
            </value>
            <value>
                <fullName>GR Grande SP e Capital</fullName>
            </value>
            <value>
                <fullName>GR Nordeste</fullName>
            </value>
            <value>
                <fullName>GR SP Interior e BH</fullName>
            </value>
            <value>
                <fullName>Guarulhos</fullName>
            </value>
            <value>
                <fullName>Inclusão Social</fullName>
            </value>
            <value>
                <fullName>Itabuna</fullName>
            </value>
            <value>
                <fullName>Itapetininga</fullName>
            </value>
            <value>
                <fullName>João Pessoa</fullName>
            </value>
            <value>
                <fullName>Juazeiro do Norte</fullName>
            </value>
            <value>
                <fullName>Jundiaí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>